# autoschematic-connector-aws

./: .gitignore  Cargo.toml  LICENSE  README.md  autoschematic.connector.ron
.github/workflows/: release.yaml
acm/: Cargo.toml  autoschematic.connector.ron
acm/src/: addr.rs  config.rs  connector.rs  main.rs  op.rs  resource.rs  tags.rs  util.rs
acm/src/connector/: client_cache.rs  get.rs  get_doc.rs  list.rs  op_exec.rs  plan.rs
apigatewayv2/: Cargo.toml  autoschematic.connector.ron
apigatewayv2/src/: addr.rs  config.rs  connector.rs  main.rs  op.rs  op_impl.rs  resource.rs  tags.rs
apigatewayv2/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs  util.rs
cloudfront/: Cargo.toml  autoschematic.connector.ron  rust-toolchain.toml
cloudfront/src/: addr.rs  config.rs  connector.rs  lib.rs  main.rs  op.rs  resource.rs  tags.rs  util.rs
cloudfront/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
cloudwatch/: Cargo.toml  autoschematic.connector.ron
cloudwatch/src/: addr.rs  config.rs  connector.rs  main.rs  op.rs  resource.rs  tags.rs
cloudwatch/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
core/: Cargo.toml
core/src/: arn.rs  config.rs  lib.rs  util.rs
ecr/: Cargo.toml  autoschematic.connector.ron
ecr/src/: addr.rs  config.rs  connector.rs  lib.rs  main.rs  op.rs  op_impl.rs  resource.rs  tags.rs
ecr/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
ecs/: Cargo.toml  autoschematic.connector.ron
ecs/src/: addr.rs  config.rs  connector.rs  lib.rs  main.rs  op.rs  op_impl.rs  resource.rs  tags.rs  util.rs
ecs/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
efs/: Cargo.toml  autoschematic.connector.ron.incomplete
efs/src/: addr.rs  config.rs  connector.rs  lib.rs  main.rs  op.rs  op_impl.rs  resource.rs  tags.rs
efs/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
elb/: Cargo.toml  autoschematic.connector.ron
elb/src/: addr.rs  config.rs  connector.rs  lib.rs  main.rs  op.rs  resource.rs  tags.rs
elb/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
iam/: Cargo.toml  autoschematic.connector.ron
iam/src/: addr.rs  connector.rs  lib.rs  main.rs  op.rs  resource.rs  tags.rs  task.rs  util.rs
iam/src/connector/: get.rs  get_doc.rs  list.rs  op_exec.rs  plan.rs
kms/: Cargo.toml  autoschematic.connector.ron.unfinished
kms/src/: addr.rs  config.rs  connector.rs  lib.rs  main.rs  op.rs  op_impl.rs  resource.rs  tags.rs
kms/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
rds/: Cargo.toml  autoschematic.connector.ron
rds/src/: addr.rs  client_cache.rs  config.rs  connector.rs  lib.rs  main.rs  op.rs  resource.rs  tags.rs
rds/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
route53/: Cargo.toml  autoschematic.connector.ron
route53/src/: addr.rs  connector.rs  main.rs  op.rs  resource.rs  util.rs
route53/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
s3/: Cargo.toml  autoschematic.connector.ron
s3/src/: addr.rs  config.rs  connector.rs  lib.rs  main.rs  op.rs  resource.rs  tags.rs  util.rs
s3/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
secretsmanager/: Cargo.toml  autoschematic.connector.ron
secretsmanager/src/: addr.rs  config.rs  connector.rs  main.rs  op.rs  op_impl.rs  resource.rs  tags.rs
secretsmanager/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
template/: Cargo.toml
template/src/: lib.rs  main.rs
template/src/connector/: list.rs  plan.rs
vpc/: Cargo.toml  autoschematic.connector.ron
vpc/src/: addr.rs  client_cache.rs  config.rs  connector.rs  main.rs  op.rs  op_impl.rs  resource.rs  tags.rs  util.rs
vpc/src/connector/: get.rs  list.rs  op_exec.rs  plan.rs
