[package]
name = "autoschematic-connector-aws-core"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
autoschematic-core = { path = "../../../autoschematic/autoschematic-core", version = "0.4.0"}
aws-config = "1.5.16"
ron = { version = "0.10.1", features = ["indexmap"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
serde_json = "1.0.138"
aws-sdk-sts = "1.60.0"