[package]
name = "autoschematic-connector-aws-ecr"
version = "0.6.1"
edition = "2024"

[lib]
name = "autoschematic_connector_aws_ecr"
path = "src/lib.rs"
[[bin]]
name = "autoschematic-connector-aws-ecr"
path = "src/main.rs"
# main = "src/lib.rs"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
autoschematic-connector-aws-core = { path = "../core", version = "0.6.1" }
autoschematic-core = { path = "../../../autoschematic/autoschematic-core", version = "0.6.1" }
# autoschematic-core = "0.3.0"
aws-config = "1.5.16"
ron = { version = "0.10.1", features = ["indexmap"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
aws-sdk-sts = "1.60.0"
urlencoding = "2.1.3"
serde_json = "1.0.138"
similar = { version = "2.7.0", features = ["unicode"] }
# aws-sdk-s3 = "1.65.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
uuid = { version = "1.15.1", features = ["v4"] }
lazy_static = "1.5.0"
aws-smithy-types = "1.3.0"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
aws-sdk-ecr = "1.77.0"
rustdoc-json = "0.9.6"
