[package]
name = "autoschematic-connector-aws-iam"
description = "An Autoschematic connector for AWS IAM"
license = "MIT"
version = "0.8.2"
edition = "2024"

[lib]
name = "autoschematic_connector_aws_iam"
path = "src/lib.rs"
[[bin]]
name = "autoschematic-connector-aws-iam"
path = "src/main.rs"

[features]
fuzz = ["arbitrary"]

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
autoschematic-connector-aws-core = { path = "../core", version = "0.8.2" }
autoschematic-core = { path = "../../../autoschematic/autoschematic-core", version = "0.8.2" }
# autoschematic-core = "0.3.0"
aws-config = "1.5.16"
ron = { version = "0.10.1", features = ["indexmap"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
aws-sdk-iam = "1.62.0"
aws-sdk-sts = "1.60.0"
urlencoding = "2.1.3"
serde_json = "1.0.138"
similar = { version = "2.7.0", features = ["unicode"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
uuid = { version = "1.15.1", features = ["v4"] }
lazy_static = "1.5.0"
aws-smithy-types = "1.3.0"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
indexmap = { version = "2.9.0", features = ["serde"] }
arbitrary = { version = "1.4.1", optional = true, features = [
    "derive_arbitrary",
] }
documented = "0.9.1"
