[package]
name = "autoschematic-connector-aws-vpc"
description = "An Autoschematic connector for AWS VPCs and related resources"
license = "MIT"
version = "0.12.0"
edition = "2024"


# [[bin]]
# name = "autoschematic-connector-aws"
[[bin]]
name = "autoschematic-connector-aws-vpc"
# main = "src/lib.rs"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
autoschematic-connector-aws-core = { path = "../core", version = "0.12.0" }
autoschematic-core = { path = "../../../autoschematic/autoschematic-core", version = "0.12.0" }
# autoschematic-core = "0.3.0"
aws-config = "1.5.16"
ron = { version = "0.12.0", features = ["indexmap"] }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
aws-sdk-iam = "1.62.0"
aws-sdk-sts = "1.60.0"
urlencoding = "2.1.3"
serde_json = "1.0.138"
similar = { version = "2.7.0", features = ["unicode"] }
# aws-sdk-s3 = "1.65.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
uuid = { version = "1.15.1", features = ["v4"] }
# aws-sdk-ecs = "1.68.0"
# aws-sdk-dynamodb = "1.66.0"
# aws-sdk-ecr = "1.66.0"
# aws-sdk-eks = "1.76.0"
lazy_static = "1.5.0"
aws-smithy-types = "1.3.0"
# aws-sdk-kms = "1.63.0"
# aws-sdk-elasticloadbalancingv2 = "1.71.0"
# aws-sdk-ssm = "1.68.0"
serde_yaml = "0.9.34"
# aws-sdk-secretsmanager = "1.66.0"
walkdir = "2.5.0"
# aws-sdk-efs = "1.66.0"
# aws-sdk-ebs = "1.64.0"
# aws-sdk-apigatewayv2 = "1.65.0"
# aws-sdk-cloudfront = "1.70.0"
indexmap = { version = "2.9.0", features = ["serde"] }
aws-sdk-ec2 = "1.128.0"
